src/objects/blng__PaymentScheduler__c.object
<CustomObject>
    <customHelpPage>blng__PaymentSchedulerHelp</customHelpPage>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__ApexJobId__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>blng__IncludeAllCurrencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include All Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>blng__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>blng__PaymentBatches__c</fullName>
        <label>Payment Batch</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__InvoiceBatch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__PaymentGateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Gateway</label>
        <referenceTo>blng__PaymentGateway__c</referenceTo>
        <relationshipLabel>Payment Scheduler</relationshipLabel>
        <relationshipName>PaymentGateway</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__PaymentType__c</fullName>
        <label>Payment Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PaymentMethodType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Startdateandtime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>blng__TargetDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Determines which invoices to pay based on the target date defined in billing configuration settings. Target date can be on or after the invoice date or invoice due date.</description>
        <inlineHelpText>Determines which invoices to pay based on the target date defined in billing configuration settings. Target date can be on or after the invoice date or invoice due date.</inlineHelpText>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>blng__TargetDayOfMonth__c</fullName>
        <label>Target Day Of Month</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__PreferredBillingDay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__TargetDayofWeek__c</fullName>
        <label>Target Day of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__DayOfWeek</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__Type__c</fullName>
        <description>Type of Schedule.
Once - Payment Scheduler will be done only one time.
Daily - Payment Scheduler will be repeated continuously daily and so on</description>
        <inlineHelpText>Type of Schedule.
Once - Payment Scheduler will be done only one time.
Daily - Payment Scheduler will be repeated continuously daily and so on</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>blng__SchedulerType</valueSetName>
        </valueSet>
    </fields>
    <label>Payment Scheduler</label>
    <listViews>
        <fullName>blng__All</fullName>
        <columns>NAME</columns>
        <columns>blng__TargetDate__c</columns>
        <columns>blng__ApexJobId__c</columns>
        <columns>blng__PaymentBatches__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Payment Schedulers</label>
    </listViews>
    <listViews>
        <fullName>blng__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Payment Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>